# TAUROS

./: .gitignore  LICENSE  Makefile  README.md  README.org
src/arch/x86_64/: boot.S  grub.cfg  linker.ld  long_mode_init.S  multiboot_header.S  old-linker.ld
tauros/: Cargo.toml
tauros/.cargo/: config
tauros/src/: lib.rs  util.rs  vga_buffer.rs
tauros/src/interrupt/: gates.rs  mod.rs
tauros/src/multiboot/: memory_map.rs  mod.rs  tags.rs
